# friends_keeper

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  friends_keeper.example.cronjob  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
friends_keeper/: __init__.py  constants.py  core.py  exceptions.py  extensions.py
friends_keeper/cli/: __init__.py  add.py  cli_options.py  delete.py  run.py  show.py  update.py
friends_keeper/database/: __init__.py  friends.py  notifications.py
friends_keeper/notifiers/: __init__.py  base.py  email.py  file.py  gotify.py
friends_keeper/utils/: __init__.py  cli.py
friends_keeper/utils/orm/: __init__.py  friends.py  notifications.py
scripts/: clean_repo.sh  create_from_csv.py  create_test_data.py  execute_all_commands.sh  get_todos.sh
tests/: conftest.py  core.py
tests/notifiers/: base.py  email.py  file.py  gotify.py
tests/utils/: __init__.py  utils.py
tests/utils/orm/: friends.py  notifications.py
