[tool.poetry]
name = "friends_keeper"
version = "0.1.0"
description = "Scheduler for getting in contact with friends"
authors = ["yeyeto2788 <juanernestobiondi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gotify = "^0.2.0"
PyYAML = "^6.0"
SQLAlchemy = "^1.4.29"
click = "^8.0.3"
jsonschema = "^4.4.0"
prettytable = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
pre-commit = "^2.16.0"
pytest = "^6.2.5"
pytest-coverage = "^0.0"
pandas = "^1.3.5"
flake8-docstrings = "^1.6.0"
bandit = "^1.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
main_core = "friends_keeper.core:main_core"
friends_keeper = "friends_keeper.cli:main_cli"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["friends_keeper", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "friends_keeper"